# ee2

./: .gitattributes  .gitignore  CLAUDE.md  _temp_land_e14.txt  _temp_names.txt  地球帝国游戏开发规则.md  开发者部署指南.md  需求.md
.claude/: settings.local.json
EE2X远航版启动器/: package-lock.json  package.json
EE2X远航版独立项目/: .gitignore  README.md
EE2X远航版独立项目/04-更新包工具/更新器套件/: .gitignore  build_bridge.bat  build_flutter_publish_tool.bat  ee2x-patcher-cli.spec  ee2x-patcher.spec  pyproject.toml
EE2X远航版独立项目/04-更新包工具/更新器套件/config/: publish.example.json  publish.yuanhang.example.json
EE2X远航版独立项目/04-更新包工具/更新器套件/src/ee2x_update_suite/: __init__.py
EE2X远航版独立项目/04-更新包工具/更新器套件/src/ee2x_update_suite/patcher_v2/: runner.py
EE2X远航版独立项目/04-更新包工具/更新器套件/src/ee2x_update_suite/publisher/: __main__.py  http_backend.py  smoke_test.py
EE2X远航版独立项目/04-更新包工具/更新器套件/src/ee2x_update_suite/shared/: constants.py  manifest_builder.py  package_rules.py  path_utils.py
EE2X魔改版启动器/: index.html  package-lock.json  package.json
EE2X魔改版启动器/src-tauri/: Cargo.toml  tauri.conf.json
EE2X魔改版启动器/src-tauri/capabilities/: default.json
EE2X魔改版启动器/src-tauri/src/: lib.rs  main.rs
backup/: INDEX.md
game-metadata/: dbunitfiles.cfg
全时代单位参数详情文档/: E10时代_完整单位参数列表.md  E11时代_完整单位参数列表.md  E12时代_完整单位参数列表.md  E13时代_完整单位参数列表.md  E14时代_完整单位参数列表.md  E15时代_完整单位参数列表.md  E1时代_完整单位参数列表.md  E2时代_完整单位参数列表.md  E3时代_完整单位参数列表.md  E4时代_完整单位参数列表.md  E5时代_完整单位参数列表.md  E6时代_完整单位参数列表.md  E7时代_完整单位参数列表.md  E8时代_完整单位参数列表.md  E9时代_完整单位参数列表.md  游戏单位参数详细位置索引文档.md  验证报告.md
单位修改日志/: INDEX.md
单位属性文档/: 14时代_完整单位索引.md  全时代_E1-E15_单位索引.md
(+1153 files in other folders)
