[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ee2x-update-suite"
version = "0.1.0"
description = "EE2X 安全更新器与发布包创建工具"
requires-python = ">=3.12"
dependencies = ["paramiko>=3.4,<4", "requests>=2.31,<3"]

[tool.setuptools.packages.find]
where = ["src"]
